<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.leonardo.exame.CalcActivity">

    <TextView
        android:id="@+id/textview_name_incoming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />

    <EditText
        android:id="@+id/edittext_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@id/textview_name_incoming"
                />

      <Button
        android:id="@+id/button_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_result"
        android:text="@string/one"
        />

    <Button
        android:id="@+id/button_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_result"
        android:layout_toRightOf="@id/button_one"
        android:text="@string/two"
        />

    <Button
        android:id="@+id/button_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_result"
        android:layout_toRightOf="@id/button_two"
        android:text="@string/three"
        />

    <Button
        android:id="@+id/button_multiplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_result"
        android:layout_toRightOf="@id/button_three"
        android:text="@string/multiplication"
        />

    <Button
        android:id="@+id/button_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_one"
        android:text="@string/four"
        />

    <Button
        android:id="@+id/button_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_two"
        android:layout_toRightOf="@id/button_four"
        android:text="@string/five"
        />

    <Button
        android:id="@+id/button_six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_two"
        android:layout_toRightOf="@id/button_five"
        android:text="@string/six"
        />

    <Button
        android:id="@+id/button_divison"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_two"
        android:layout_toRightOf="@id/button_six"
        android:text="@string/division"

        />

    <Button
        android:id="@+id/button_seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_four"
        android:text="@string/seven"
        />


    <Button
        android:id="@+id/button_eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_four"
        android:layout_toRightOf="@id/button_seven"
        android:text="@string/eight"
        />

    <Button
        android:id="@+id/button_nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_four"
        android:layout_toRightOf="@id/button_eight"
        android:text="@string/nine"
        />

    <Button
        android:id="@+id/button_adiction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_four"
        android:layout_toRightOf="@id/button_nine"
        android:text="@string/addition"
        />

    <Button
        android:id="@+id/button_zero"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_seven"
        android:text="@string/zero"

        />

    <Button
        android:id="@+id/button_subtraction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_seven"
        android:layout_toRightOf="@id/button_nine"
        android:text="@string/subtraction"

        />



    <Button
        android:id="@+id/button_equal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_zero"
        android:text="@string/equal"
        />

    <Button
        android:id="@+id/button_previous_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_equal"
        android:text="@string/back_to_previous_screen"
        android:layout_marginTop="60dp"

        />






</RelativeLayout>
