<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="60dp"
    android:paddingRight="60dp"
    android:paddingTop="30dp"
    android:paddingBottom="30dp"
    tools:context="com.example.leonardo.exame.FormActivity">

    <TextView
        android:id="@+id/textview_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_name_to_continue"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/edittext_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/name"
        android:layout_below="@id/textview_tip"
        android:layout_centerHorizontal="true"
        android:maxLength="40"
        android:inputType="text"
        android:digits="@string/alphabet"/>

    <Button
        android:id="@+id/button_continue"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/button_continue"
        android:layout_marginTop="250dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/edittext_name"/>

</RelativeLayout>
